# pixessa

./: db.sqlite3  manage.py  pyproject.toml  requirements.txt
accounts/: api.py  auth_api.py  models.py
accounts/migrations/: 0001_initial.py  0002_alter_user_is_private.py
blocks/: admin.py  api.py  models.py
blocks/migrations/: 0001_initial.py
hate_speech_model/: apps.py  preprocessing.py
hate_speech_model/training/: train.py
hate_speech_model/training/models/: model.pkl
hate_speech_model/utils/: model_loader.py
likes/: admin.py  api.py  models.py
likes/migrations/: 0001_initial.py
messaging/: admin.py  api.py  models.py
messaging/migrations/: 0001_initial.py
notifications/: admin.py  api.py  models.py
notifications/migrations/: 0001_initial.py
pixessa/: asgi.py  settings.py  urls.py  wsgi.py
posts/: admin.py  api.py  models.py
posts/migrations/: 0001_initial.py  0002_comment_is_offensive.py  0003_comment_hate_score.py
reports/: error_analysis.csv  training_report.txt
